# OpenPy-fx-tools-DSS

./: .gitignore  LICENSE.md  Notes.txt  README.md  main_COM.py  main_openpy_fx_tools_dss.py  main_py_fx_tools.py  main_test.py  main_test_DSS_data.py  pyproject.toml  requirements.txt
OpenPy_fx_tools_dss/: IMEX_init.py
OpenPy_fx_tools_dss/IMEX_to_DSS/DIGS_to_DSS/: DigSilent_to_OpenDSS.py
OpenPy_fx_tools_dss/IMEX_to_DSS/GIS_info_DSS/: Update_element_coordinates.py
OpenPy_fx_tools_dss/IMEX_to_DSS/xlsx_DSS_xlsx/: create_file_xlsx.py
openpy_fx_tools_dss/: COM_Interface.py  IMEX_init.py  Master_base.py  NameClass_columns.py  __init__.py  helper_functions.py  interface_dss.py  load_examples.py
openpy_fx_tools_dss/COM/: Getting_Started.py  dss_library.py
openpy_fx_tools_dss/COM/Interface/: ActiveBus.py  ActiveCktElement.py  ActiveClass.py  ActiveDSSElement.py  Base.py  Circuit.py  Text.py
openpy_fx_tools_dss/COM/Interface/PDElement/: Lines.py  (+1 more)
openpy_fx_tools_dss/logg_print_alert/: logg_alert.py
py_fx_tools_dss/: DigSilent_to_OpenDSS.py  IMEX_init.py  Master_base.py  NameClass_columns.py  Update_element_coordinates.py  __init__.py  create_file_xlsx.py  helper_functions.py  interface_dss.py  lib_py_base.py
py_fx_tools_dss/Types_elem_DIGS_to_DSS/: Buscoords.py  General_DSS.py  Meters_DSS.py  Other_DSS.py  PD_Elements.py
py_fx_tools_dss/Types_elem_DSS_to_xlxs/: General_elements_DSS.py  PC_elements_DSS.py
py_fx_tools_dss/logg_print_alert/: logg_alert.py
py_fx_tools_dss/xlsx_DSS_xlsx/: Codigo_PyQGIS.rar  DSS_script.py  base_xlsx_DSS.py  xlsx_files_examples.py
(+248 files in other folders)
